# libleechgrpc

./: .gitignore  Readme.md  libleechgrpc.sln
cert/: client-tls.key  password.txt  server-tls.p12
example_certs/: client-tls.cer  client-tls.p12  readme.txt  server-tls.cer  server-tls.key
leechgrpc_test_client/: leechgrpc_test_client.cc  leechgrpc_test_client.vcxproj  leechgrpc_test_client.vcxproj.filters
leechgrpc_test_server/: leechgrpc_test_server.cc  leechgrpc_test_server.vcxproj  leechgrpc_test_server.vcxproj.filters
libleechgrpc/: CMakeLists.txt  leechgrpc_client.cc  leechgrpc_server.cc  libleechgrpc.vcxproj  libleechgrpc.vcxproj.filters  oscompatibility.cc  oscompatibility.h  util.cc  util.h  version.h
libleechgrpc/proto/: leechgrpc.proto
